Help link changed to ExLibris App page.

--- a/cloudapp/src/assets/manifest.json
+++ b/cloudapp/src/assets/manifest.json
@@ -4,7 +4,8 @@
    "description": "Adding extra functionality related to inter-library activities - for at start templates for external localization of Borrowing Request materials. ",
    "author": "Royal Danish Libraty, Denmark",
    "pages": {
-      "settings": "/#/settings"
+      "settings": "/#/settings",
+      "help": "https://developers.exlibrisgroup.com/?post_type=appcenter&p=68351"
    },
    "icon": {
       "type": "font",
