--- a/cloudapp/src/assets/manifest.json
+++ b/cloudapp/src/assets/manifest.json
@@ -1,11 +1,11 @@
 {
    "id": "interlibrary-add-on",
    "title": "Interlibrary Add-on",
-   "description": "Adding extra functionality related to inter-library activities - for at start templates for external localization of Borrowing Request materials. ",
+   "description": "Adding extra functionality related to inter-library activities - for at start templates for external localization of Borrowing Request materials.",
+   "subtitle": "Adding extra functionality related to inter-library activities - for at start templates for external localization of Borrowing Request materials.",
    "author": "Royal Danish Libraty, Denmark",
    "pages": {
-      "settings": "/#/settings",
-      "help": "https://developers.exlibrisgroup.com/?post_type=appcenter&p=68351"
+      "settings": "/#/settings"
    },
    "icon": {
       "type": "font",
