--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,7 @@
    "author": "Royal Danish Libraty, Denmark",
    "pages": {
       "settings": "/#/settings",
+      "config": "/#/config",
       "help": "https://developers.exlibrisgroup.com/?post_type=appcenter&p=68351"
    },
    "icon": {
