--- a/cloudapp/src/assets/manifest.json
+++ b/cloudapp/src/assets/manifest.json
@@ -3,7 +3,7 @@
    "title": "Interlibrary Add-on",
    "description": "NEW: Convert Borrowing Request to digitization in a few clicks. Still has: templates for external localization of Borrowing Request materials..",
    "subtitle": "NEW: Convert Borrowing Request to digitization in a few clicks. Still has: templates for external localization of Borrowing Request materials..",
-   "author": "Royal Danish Libraty, Denmark",
+   "author": "Royal Danish Library, Denmark",
    "pages": {
       "settings": "/#/settings",
       "config": "/#/config"
