--- a/config.json
+++ b/config.json
@@ -3,5 +3,7 @@
    "description": "Adding extra functionality related to interlibrary activities - e.g. external localisation of materials. ",
    "env": "https://kbdk-kgl-psb.alma.exlibrisgroup.com/institution/45KBDK_KGL",
    "port": 4200,
-   "name": "interlibrary-add-on"
+   "name": "interlibrary-add-on",
+   "subtitle": "Convert Borrowing Request to digitization in a few clicks. Also: templates for external localization of Borrowing Request materials..",
+   "author": "Royal Danish Library, Denmark"
 }
