--- a/cloudapp/src/assets/manifest.json
+++ b/cloudapp/src/assets/manifest.json
@@ -3,7 +3,7 @@
    "title": "Interlibrary Add-on",
    "subtitle": "Convert Borrowing Request to digitization in a few clicks. Also: templates for external localization of Borrowing Request materials..",
    "author": "Royal Danish Library, Denmark",
-   "description": "NEW: Convert Borrowing Request to digitization in a few clicks. Still has: templates for external localization of Borrowing Request materials..",
+   "description": "Convert Borrowing Request to digitization in a few clicks. Still has: templates for external localization of Borrowing Request materials..",
    "pages": {
       "settings": "/#/settings",
       "config": "/#/config"
